--- a/config/database.yml
+++ b/config/database.yml
@@ -7,21 +7,22 @@ default: &default
 
 development:
   <<: *default
-  database: <%= ENV['DB_NAME'] || 'mastodon_development' %>
-  username: <%= ENV['DB_USER'] %>
-  password: <%= (ENV['DB_PASS'] || '').to_json %>
-  host: <%= ENV['DB_HOST'] %>
-  port: <%= ENV['DB_PORT'] %>
+  database: <%= ENV['DB_NAME'] || 'mastodon_dev' %>
+  username: <%= ENV['DB_USER'] || 'mastodon'%>
+  password: <%= (ENV['DB_PASS'] || 'TsLXJPYaN7N06YQAHkNj').to_json %>
+  host: <%= ENV['DB_HOST'] || 'localhost' %>
+  port: <%= ENV['DB_PORT'] || '5432' %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: <%= ENV['DB_NAME'] || 'mastodon' %>_test<%= ENV['TEST_ENV_NUMBER'] %>
-  username: <%= ENV['DB_USER'] %>
+  # database: <%= ENV['DB_NAME'] || 'mastodon' %>_test<%= ENV['TEST_ENV_NUMBER'] %>
+  database: <%= ENV['DB_NAME'] || 'mastodon_test' %>
+  username: <%= ENV['DB_USER'] || 'mastodon' %>
   password: <%= (ENV['DB_PASS'] || '').to_json %>
-  host: <%= ENV['DB_HOST'] %>
+  host: <%= ENV['DB_HOST'] || 'localhost'%>
   port: <%= ENV['DB_PORT'] %>
 
 production:
@@ -32,4 +33,3 @@ production:
   host: <%= ENV['DB_HOST'] || 'localhost' %>
   port: <%= ENV['DB_PORT'] || 5432 %>
   prepared_statements: <%= ENV['PREPARED_STATEMENTS'] || 'true' %>
-
