--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "@gamestdio/websocket": "^0.3.2",
     "@github/webauthn-json": "^0.5.7",
     "@rails/ujs": "^6.1.4",
+    "@veramo/core": "^3.1.0",
+    "@veramo/did-resolver": "^3.1.0",
     "array-includes": "^3.1.4",
     "arrow-key-navigation": "^1.2.0",
     "autoprefixer": "^9.8.8",
@@ -88,10 +90,12 @@
     "css-loader": "^5.2.7",
     "cssnano": "^4.1.11",
     "detect-passive-events": "^2.0.3",
+    "did-resolver": "^3.2.0",
     "dotenv": "^16.0.0",
     "emoji-mart": "npm:emoji-mart-lazyload",
     "es6-symbol": "^3.1.3",
     "escape-html": "^1.0.3",
+    "ethr-did-resolver": "^5.0.4",
     "exif-js": "^2.3.0",
     "express": "^4.17.2",
     "file-loader": "^6.2.0",
@@ -163,6 +167,7 @@
     "tiny-queue": "^0.2.1",
     "twitter-text": "3.1.0",
     "uuid": "^8.3.1",
+    "web-did-resolver": "^2.0.14",
     "webpack": "^4.46.0",
     "webpack-assets-manifest": "^4.0.6",
     "webpack-bundle-analyzer": "^4.5.0",
