--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - test
     volumes:
       - ./postgres14:/var/lib/postgresql/data
+    ports:
+      - 5432:5432
 
   redis:
     restart: always
